fixed body height + align all assets-values numbers in semi table mode + adjested font for numbers

--- a/dashboard-assets-dark.css
+++ b/dashboard-assets-dark.css
@@ -15,7 +15,7 @@ body {
     color: #808191;
     font-family: "DM Sans", sans-serif;
     font-weight: 500;
-    height: 100vh;
+    height: 1024px;
     /* GRIDBOX */
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -27,6 +27,8 @@ body {
 ul, li {
     list-style: none;
 }
+
+/* TODO fix spacing between sidebar first div list items */
 
 a {
     text-decoration: none;
@@ -47,7 +49,7 @@ a:active {
 
 #sidebar {
     grid-area: 1 / 1 / 7 / 2;
-    height: 100vh;
+    height: 1024px;
     padding: 1.4rem 2.4rem 1.4rem 1.2rem;
     display: flex;
     flex-direction: column;
@@ -142,8 +144,47 @@ main > section {
 #assets-values {
     grid-area: 1 / 1 / 5 / 3;
     margin-bottom: 5rem;
+    padding: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2.2rem;
+    width: 361px;
 }
 #activity-graph { grid-area: 1 / 3 / 2 / 5; }
 #noties { grid-area: 2 / 3 / 4 / 4; }
 #sensors { grid-area: 2 / 4 / 4 / 5; }
 #reminder { grid-area: 4 / 3 / 5 / 5; }
+
+#assets-values .row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    /* gap: 2rem; */
+}
+
+#assets-values .row-cell {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+
+}
+
+#assets-values .row .row-cell:first-child {
+    border-right: 0.05rem solid red;
+    padding-right: 1.8rem;
+}
+
+#assets-values .row .row-cell:last-child {
+    border-left: 0.05rem solid white;
+    padding-left: 1.8rem;
+}
+
+.row-cell p:last-child {
+    font-weight: 700;
+    font-size: 1.15rem;
+}
+
+#assets-values img {
+    width: 316px;
+    height: 615px;
+}
